// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`admin get comments > should return comments 1`] = `
{
  "anonymousName": null,
  "children": [],
  "content": "comment 2 from "admin" role "admin" isSpam "false" anonymous "false"",
  "createdAt": "1970-01-01T00:00:20.000Z",
  "displayName": "admin",
  "id": 1,
  "isSpam": false,
  "parentId": null,
  "path": "/",
  "rawContent": "comment 2 from "admin" role "admin" isSpam "false" anonymous "false"",
  "replyToId": null,
  "updatedAt": "2000-01-01T00:00:00.000Z",
  "userAgent": null,
  "userEmail": "admin@example.com",
  "userId": "1",
  "userImage": "https://www.gravatar.com/avatar/e64c7d89f26bd1972efa854d13d7dd61?s=200&d=identicon&r=g",
  "userIp": null,
  "userName": "admin",
  "visitorEmail": null,
  "visitorName": null,
}
`;

exports[`non-admin get comments > should return comments 1`] = `
{
  "anonymousName": null,
  "children": [],
  "content": "comment 2 from "admin" role "admin" isSpam "false" anonymous "false"",
  "createdAt": "1970-01-01T00:00:20.000Z",
  "displayName": "admin",
  "id": 1,
  "parentId": null,
  "path": "/",
  "rawContent": "comment 2 from "admin" role "admin" isSpam "false" anonymous "false"",
  "replyToId": null,
  "updatedAt": "2000-01-01T00:00:00.000Z",
  "userId": "1",
  "userImage": "https://www.gravatar.com/avatar/e64c7d89f26bd1972efa854d13d7dd61?s=200&d=identicon&r=g",
}
`;
